--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "tailwindcss": "^2.0.1"
+    },
+    "dependencies": {
+        "datatables.net": "^1.10.23",
+        "datatables.net-dt": "^1.10.23"
     }
 }
